[gd_scene load_steps=9 format=3 uid="uid://cya34q1kmryo"]

[ext_resource type="Script" uid="uid://bqomhxgmg7l2" path="res://Main/HUD/pauseMenu/pause_menu.gd" id="1_yxhkn"]
[ext_resource type="Texture2D" uid="uid://krmcg6ghw7ib" path="res://Assets/HUD/pause_circle.png" id="2_mgofe"]
[ext_resource type="PackedScene" uid="uid://vh7libcpxh44" path="res://Main/HUD/pauseMenu/pause_menu_button_margin.tscn" id="2_yxhkn"]
[ext_resource type="PackedScene" uid="uid://c7ssjlpdmob4j" path="res://Main/HUD/menu_button/menu_button_base.tscn" id="3_g3dnt"]

[sub_resource type="Animation" id="Animation_fx40l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("marginControl:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("backgroundLayer/background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("circleTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_wax4v"]
resource_name = "close"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("marginControl:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("backgroundLayer/background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0.336134), Color(1, 1, 1, 0.168067), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("circleTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_235h3"]
resource_name = "open"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("marginControl:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.5), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("backgroundLayer/background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.15, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.168067), Color(1, 1, 1, 0.336134), Color(1, 1, 1, 0.588235)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("circleTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p208s"]
_data = {
&"RESET": SubResource("Animation_fx40l"),
&"close": SubResource("Animation_wax4v"),
&"open": SubResource("Animation_235h3")
}

[node name="pauseMenuLayer" type="CanvasLayer"]
process_mode = 3
layer = 99
script = ExtResource("1_yxhkn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p208s")
}

[node name="narrationFocusDelayTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="backgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" type="ColorRect" parent="backgroundLayer"]
modulate = Color(1, 1, 1, 0)
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="circleTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
clip_children = 2
offset_left = 135.0
offset_right = 495.0
offset_bottom = 360.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(180, 180)
texture = ExtResource("2_mgofe")

[node name="VBoxContainer" type="VBoxContainer" parent="circleTexture"]
layout_mode = 2
offset_left = -131.0
offset_top = 73.0
offset_right = 501.0
offset_bottom = 286.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="circleTexture/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSA"
horizontal_alignment = 1

[node name="resumeButton" parent="circleTexture/VBoxContainer" instance=ExtResource("3_g3dnt")]
unique_name_in_owner = true
layout_mode = 2
button_text = "Reanudar juego"

[node name="optionsButton" parent="circleTexture/VBoxContainer" instance=ExtResource("3_g3dnt")]
layout_mode = 2
button_text = "Configuraci√≥n"

[node name="menuButtonBase3" parent="circleTexture/VBoxContainer" instance=ExtResource("3_g3dnt")]
layout_mode = 2
button_text = "Salir del juego"

[node name="buttonLayer" type="CanvasLayer" parent="."]
layer = 101

[node name="MarginContainer" type="MarginContainer" parent="buttonLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="pauseButtonMargin" parent="buttonLayer/MarginContainer" instance=ExtResource("2_yxhkn")]
layout_mode = 2
assigned_pause_menu = NodePath("../../..")

[node name="marginControl" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="timeout" from="narrationFocusDelayTimer" to="." method="_on_narration_focus_delay_timer_timeout"]
[connection signal="pressed" from="circleTexture/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="circleTexture/VBoxContainer/optionsButton" to="." method="_on_options_button_pressed"]
